# harbor

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: eval.yml
docs/: BENCHMARKS.md  DEMO.md  DESIGN.md  RESUME_BULLETS.md
docs/images/: README.md
eval/: .gitkeep  baseline.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  ChatView.tsx  Dashboard.tsx  index.css
gateway/: Dockerfile  go.mod  go.sum
gateway/cmd/gateway/: main.go
gateway/internal/breaker/: breaker.go
gateway/internal/cache/: cache.go
gateway/internal/config/: config.go
gateway/internal/dispatch/: chain.go
gateway/internal/metrics/: metrics.go
gateway/internal/provider/: faulty.go  mock.go  openai.go  provider.go
gateway/internal/ratelimit/: ratelimit.go
gateway/internal/router/: router.go
gateway/internal/server/: chat.go  server.go
observability/: prometheus.yml
observability/grafana/dashboards/: harbor.json
observability/grafana/provisioning/dashboards/: dashboards.yml
refapp/: Dockerfile  pyproject.toml
refapp/app/: config.py  db.py  embeddings.py  gateway_client.py  main.py  models.py  retrieval.py
refapp/app/api/: chat.py  eval_api.py
refapp/app/eval/: cli.py  compare.py  evaluators.py  runner.py  seed.py
refapp/bench/: zipf_load.py
refapp/data/corpus/: deployments.md  pods.md  services.md
refapp/scripts/: ingest.py
